# diarization-to-eaf

./: .gitignore  README.md  config.ini  pyproject.toml
diarization_to_eaf/: diarization_processor.py  eaf_generator.py  main.py  utils.py
tests/: test_diarization_processor.py  test_eaf_generator.py  test_utils.py
