[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diarization-to-eaf"
version = "0.1.0"
description = "Convert speaker diarization JSON to ELAN Annotation Format (EAF)"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Chad Phillips"},
]
dependencies = [
    "lxml",
    "tqdm",
]

[project.scripts]
diarization-to-eaf = "diarization_to_eaf.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["diarization_to_eaf*"]

[tool.pytest.ini_options]
# addopts = "-v --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
mypy_path = "."
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
